--- a/waxom.scss
+++ b/waxom.scss
@@ -6,14 +6,16 @@
     align-items: center;
     width: 1234px;
     height: 136px;
-    @media only screen and (max-width: 767px) {
-        width: 760px;
-        
-    }
+    
     @media only screen and (max-width: 479px) {
         width: 479px;
         max-height: 80px;
     }
+    @media only screen and (orientation: landscape) and(min-width: 500px)and (max-width: 800px) {
+        width: 800px;
+        min-height: 100px;
+    }
+    
     &__wrapper {
         background: rgba(25, 25, 25, 0.2)  ;     
         display: flex;
@@ -26,12 +28,14 @@
        height: 136px;
         position: fixed;
         z-index: 10;
-        @media only screen and (max-width: 767px) {
-            width: 760px;
-        }
+       
         @media only screen and (max-width: 479px) {
             width: 479px;
             max-height: 80px;
+        }
+        @media only screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+            min-height: 100px;
         }
     }
     &__logo {
@@ -39,12 +43,13 @@
         background: url('logoHeader.png') no-repeat;
         height: 56px;
         width: 184px;
-        @media only screen and (max-width: 767px) {
-            width: 65px;
-            
-        }
+       
         @media only screen and (max-width: 479px) {
             width:65px;
+        }
+        @media only screen and (orientation: landscape) and (max-width: 800px) {
+            width: 65px;
+            
         }
     }
     &__menu {
@@ -57,13 +62,15 @@
         flex-wrap: nowrap;
         justify-content: space-between;
         align-items: center;
-        @media only screen and (max-width: 767px) {
-            width: 600px;
-            margin:0px;
-        }
+       
         @media only screen and (max-width: 479px) {
             width: 479px;
             display: none;
+        }
+        @media only screen and (orientation: landscape)  and (max-width: 800px) {
+            width:500px;
+            margin-left:50px;
+            margin-right: 30px;
         }
         
         &_item {
@@ -84,10 +91,7 @@
         justify-content: space-between;
         height: 136px;
         width: 80px;
-        @media only screen and (max-width: 767px) {
-            margin-left: 5px;
-            width: 50px;
-        }
+        
         @media only screen and (max-width: 479px) {
             width:50px;
         }
@@ -95,7 +99,7 @@
             background: url('cart.png') no-repeat;
             height: 24px;
             width: 18px;
-            @media only screen and (max-width: 767px) {
+            @media only screen and (max-width: 479px) {
                 display: none;
             }
 
@@ -117,12 +121,13 @@
     align-items: center;
     height: 1024px;
     width: 1234px;
-    @media only screen and (max-width: 767px) {
-        width: 760px;
-       
-    }
+    
     @media only screen and (max-width: 479px) {
         width: 479px;
+        height: 700px;
+    }
+    @media only screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
         height: 700px;
     }
 
@@ -139,11 +144,13 @@
         width: 100%;
         background-size: cover;
         background-position: center;
-        @media only screen and (max-width: 767px) {
-            width: 760px;
-        }
+      
         @media only screen and (max-width: 479px) {
             width: 479px;
+            height: 700px;
+        }
+        @media only screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
             height: 700px;
         }
         
@@ -203,14 +210,14 @@
     align-items: center;
     width: 1234px;
     height: 424px;
-    @media only screen and (max-width: 767px) {
-        width: 760px;
-        height: 604px;
-       
-    }
+    
     @media only screen and (max-width: 479px) {
         width:460px;
         height: 950px;
+    }
+    @media only screen and (orientation: landscape) and (max-width: 800px) {
+        width: 760px;
+        height: 700px;
     }
     &__wrapper{
         display: flex;
@@ -221,13 +228,14 @@
         align-items: center;
         width: 100%;
         height: 424px;
-        @media only screen and (max-width: 767px) {
-            width: 760px;
-            height: 604px;
-        }
+       
         @media only screen and (max-width: 479px) {
             width:460px;
             height: 950px;
+        }
+        @media only screen and (orientation: landscape) and (max-width: 800px) {
+            width: 760px;
+            height: 700px;
         }
     }
     &__webapp,
@@ -314,7 +322,7 @@
     align-items: center;
     width: 1234px;
     height: 150px;
-    @media only screen and (max-width: 800px) {
+    @media only screen and (orientation: landscape)and(max-width: 800px) {
         width: 760px;
     }
     @media only screen and (max-width: 479px) {
@@ -333,8 +341,8 @@
         height: 150px;
         background: #271e1b; 
         background: -webkit-linear-gradient(left, #271e1b 0%,#473025 100%); 
-        @media only screen and (max-width: 800px) {
-            width: 760px;
+        @media only screen and (orientation: landscape)and(max-width: 800px) {
+            width: 800px;
         }
         @media only screen and (max-width: 479px) {
             width:479px;
@@ -390,9 +398,9 @@
     justify-content: space-around;
     align-content: center;
     align-items: center;
-    @media only screen and (max-width: 800px) {
-        width: 760px;
-       
+    @media only screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
+        height: 1500px;
     }
     @media only screen and (max-width: 479px) {
         width:479px;
@@ -411,6 +419,10 @@
         @media only screen and (max-width: 479px) {
             width:479px;
             height: 2500px;
+        }
+        @media only screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+            height: 1500px;
         }
     }
     &__title{
@@ -491,6 +503,13 @@
         @media only screen and (max-width: 479px) {
             width: 435px;  
         }
+
+        @media only screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+           height: 1100px;
+           padding: 20px;
+        }
+
         	
         
         &_phone,
@@ -652,9 +671,9 @@
     justify-content: center;
     align-content: center;
     align-items: center;
-    @media screen and (max-width: 800px) {
-        width: 760px;
-       
+    @media screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
+        height: 500px;
     }
     @media only screen and (max-width: 479px) {
         width:479px;
@@ -676,6 +695,10 @@
             width:479px;
             height: 500px;
             
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+            height: 500px;
         }
     }
     &__play{
@@ -718,12 +741,14 @@
     justify-content: center;
     align-content: center;
     align-items: center;
-    @media screen and (max-width: 800px) {
-        width: 760px;
+    @media screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
+        
        
     }
     @media only screen and (max-width: 479px) {
         width:479px;
+        
         
     }
     &__wrapper{
@@ -738,8 +763,10 @@
         width: 100%;
         @media only screen and (max-width: 479px) {
             width:479px;
-            
-            
+  
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
         }
     }
     &__imagePhone{
@@ -750,6 +777,11 @@
             width:479px;
            
         }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 400px;
+            background: url('bigphone800.png') no-repeat;
+        }
+        
        
     }
     &__aboutPhone{
@@ -757,6 +789,10 @@
         @media only screen and (max-width: 479px) {
             width:479px;
           
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 400px;
+           
         }
         &_caption{
             margin: 40px 0;
@@ -768,6 +804,10 @@
                 text-align: center;
                  
             }
+            @media screen and (orientation: landscape) and (max-width: 800px) {
+                font-size: 26px;
+               
+            }
         }
         &_text{
             font-size: 16px;
@@ -776,9 +816,12 @@
             line-height: 1.5;
             @media only screen and (max-width: 479px) {
                 font-size: 15px;
-                
                margin:  0 20px;
-              
+            }
+            @media screen and (orientation: landscape) and (max-width: 800px) {
+                font-size: 14px;
+                width: 380px;
+               
             }
         }
         &_list{
@@ -797,7 +840,12 @@
                 margin-left:  10px ;
                 
             }
+            @media screen and (orientation: landscape) and (max-width: 800px) {
+                width: 380px;
+                
+            }
             &-item{
+                line-height: 2;
                 width: 600px;
                 display: flex;
                 flex-direction: row;
@@ -810,16 +858,22 @@
                     width: 479px;
                   
                 }
+                @media screen and (orientation: landscape) and (max-width: 800px) {
+                    width: 380px;
+                   
+                   
+                }
+
                 
                 &-symbol{
                     background: url('arrows.png') no-repeat;
-                    height: 21px;
-                    width: 22px;
+                    min-height: 21px;
+                    min-width: 22px;
                    
                 }
                 &-par{
                     
-                    line-height: 2;
+                   line-height: 2;
                     margin-left: 25px;
                     font-size: 14px;
                     font-family: "Montserrat";
@@ -828,6 +882,7 @@
                     @media only screen and (max-width: 479px) {
                         font-size: 13px;
                        margin-left:  10px ;
+                      
                       
                     }
                 }
@@ -847,8 +902,16 @@
     align-items: center;
     min-height: 302px;
     width: 1234px;
-    @media screen and (max-width: 800px) {
-        width: 760px;
+    @media screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
+        justify-content: space-between;
+        align-content: center;
+        align-items: center;
+        margin: 0 30px;
+       
+    }
+    @media only screen and (max-width: 479px) {
+        width:479px;
         margin: 0 30px;
         display: flex;
         flex-direction: row;
@@ -856,10 +919,6 @@
         justify-content: center;
         align-items: stretch;
         align-content:space-between;
-       
-    }
-    @media only screen and (max-width: 479px) {
-        width:479px;
         
     }
     &__wrapper{
@@ -876,6 +935,11 @@
         @media only screen and (max-width: 479px) {
             width:479px;
             
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+            
+           
         }
     }
     &__clients{
@@ -954,8 +1018,9 @@
     justify-content: space-around;
     align-content: center;
     align-items: center;
-    @media screen and (max-width: 800px) {
-        width: 760px;
+    @media screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
+        height:1100px;
        
     }
     @media only screen and (max-width: 479px) {
@@ -975,6 +1040,11 @@
         @media only screen and (max-width: 479px) {
             width:479px;
             height:1400px;
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+            height:1100px;
+           
         }
     }
     &__caption{
@@ -999,6 +1069,11 @@
             width: 420px;
             
         }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 700px;
+            
+           
+        }
     }
     &__slaidImage{
         min-height: 395px;
@@ -1012,8 +1087,11 @@
         @media only screen and (max-width: 479px) {
             width: 450px;
             height: 1200px;
-          
-            
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+            align-content: space-between;
+            height: 820px;
         }
         &_men, &_women, &_ship{
             width: 370px;
@@ -1112,8 +1190,8 @@
     justify-content: space-around;
     align-content: space-around;
     align-items: center;
-    @media screen and (max-width: 800px) {
-        width: 760px;
+    @media screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
        
     }
     @media only screen and (max-width: 479px) {
@@ -1128,13 +1206,18 @@
         align-content: center;
         align-items: center;
         background: url('sponsors.png') no-repeat;
-        height: 489px;
+        min-height: 489px;
         width: 100%;
         background-size: cover;
         background-position: center;
         @media only screen and (max-width: 479px) {
             width:479px;
             
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+            
+           
         }
     }
     &__barber{
@@ -1168,9 +1251,9 @@
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    @media screen and (max-width: 800px) {
-        width: 760px;
-       
+    @media screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
+        margin: 0 30px;
     }
     @media only screen and (max-width: 479px) {
         width:479px;
@@ -1191,6 +1274,10 @@
             width:479px;
             min-height: 760px;
         }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+           
+        }
     }
     &__aboutWaxon{
         height: 348px;
@@ -1198,6 +1285,10 @@
         @media only screen and (max-width: 479px) {
             width: 230px;
             
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 260px;
+           
         }
         &_caption{
             background: url('logoHeader.png') no-repeat;
@@ -1417,9 +1508,9 @@
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    @media screen and (max-width: 800px) {
-        width: 760px;
-       
+    @media screen and (orientation: landscape) and (max-width: 800px) {
+        width: 800px;
+       margin: 0 30px;
     }
     @media only screen and (max-width: 479px) {
         width:479px;
@@ -1439,6 +1530,10 @@
             width:479px;
             
         }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 800px;
+           
+        }
         
     }
     &__contact{
@@ -1451,6 +1546,12 @@
         width: 400px;
         @media only screen and (max-width: 479px) {
             width:200px;
+            flex-direction: column;
+            align-content: flex-start;
+            align-items: flex-start;
+        }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 200px;
             flex-direction: column;
             align-content: flex-start;
             align-items: flex-start;
@@ -1472,6 +1573,11 @@
             text-align: center;
             @media only screen and (max-width: 479px) {
                 text-align: left;
+                border: none;
+            }
+            @media screen and (orientation: landscape) and (max-width: 800px) {
+                text-align: left;
+                border: none;
             }
         }
         &_items:nth-child(3){
@@ -1480,6 +1586,11 @@
             text-align: center;
             @media only screen and (max-width: 479px) {
                 text-align: left;
+                border: none;
+            }
+            @media screen and (orientation: landscape) and (max-width: 800px) {
+                text-align: left;
+                border: none;
             }
         }
         &_items:hover{
@@ -1499,6 +1610,13 @@
             flex-direction: column;
             
         }
+        @media screen and (orientation: landscape) and (max-width: 800px) {
+            width: 200px;
+            flex-direction: column;
+            align-content: flex-start;
+            align-items: flex-start;
+            
+        }
         &_items{
             font-size: 13px;
             font-family: "Montserrat";
@@ -1516,6 +1634,10 @@
             border-left:1px solid rgb(29, 29, 29);
             width:157px;
             text-align: center;
+            @media screen and (orientation: landscape) and (max-width: 800px) {
+                border: none;
+                text-align: left;
+            }
         }
         &_items:hover{
             color: rgb(199, 178, 153); 
