--- a/waxom.scss
+++ b/waxom.scss
@@ -440,8 +440,8 @@
         align-items: center;
         align-content: space-between;
         @media only screen and (max-width: 479px) {
-            width: 100%;
-            height: 80px;
+            width: 108%;
+            min-height: 80px;
         }
         &_item {
             margin: 0 5px;
@@ -450,6 +450,7 @@
             line-height: 33px;
             border: 2px solid rgb(248, 248, 248);
             border-radius: 3px;
+            
             &-link {
                 font-weight: bold;
                 width: 120px;
